1.16.3 /
[Alexandr Topilski]

1.16.2 / February 10, 2018
[Alexandr Topilski]
- Json rpc for statistic/version
- [RocksDB] LZ4 compression support
- [RocksDB] Update sources to version 5.10.0

1.16.1 / February 1, 2018
[Alexandr Topilski]
- Fix password dialog

1.16.0 / January 28, 2018
[Alexandr Topilski]
- Pika db first step integration
- [Redis] Redirect requests to cluster nodes
- [Redis] Up hiredis sources to version 0.13.3
- [Redis] Sentinel type

1.15.1 / January 17, 2018
[Alexandr Topilski]
- CONFIG GET databases
- Runtime SSH password
- [LevelDB] Compression options
- [RocksDB] Compression options
- Update external libraries

1.15.0 / January 10, 2018
[Alexandr Topilski]
- Save/Restore MainWindow position
- Save Json fixes
- [RocksDB] added support columns(database)

1.14.3 / January 2, 2018
[Alexandr Topilski]
- How to use dialog
- Bug fixes

1.14.2 / December 30, 2017
[Alexandr Topilski]
- #80 can't connect using ssh
- rebloom commands support

1.14.1 / December 21, 2017
[Alexandr Topilski]
- [Redis] SSH input checks
- Text view combobox
- Retina display support

1.14.0 / December 14, 2017
[Alexandr Topilski]
- Verify private user password
- UI fixes
- Is public version now trial

1.13.1 / December 5, 2017
[Alexandr Topilski]
- Check update fixes
- [ForestDB] by default in off state, possible builds from sources or in individual build request
- [RocksDB] by default in off state, possible builds from sources or in individual build request

1.13.0 / December 5, 2017
[Alexandr Topilski]
- [Redis] XADD command UI handling
- [Redis] XRANGE command UI handling
- [Redis] Support streams type
- Keys displaying strategy
- Clone connection functionality
- Fixed history workflow
- XML viewer

1.12.0 / November 26, 2017
[Alexandr Topilski]
- Fixed download links
- Validate json
- [UpscaleDB] by default in off state, possible builds from sources or in individual build request

1.11.0 / November 22, 2017
[Alexandr Topilski]
- EULA dialog
- Json keys validation