@@ -850,9 +850,6 @@ IF(BUILD_WITH_ROCKSDB)
   FIND_PATH(ROCKSDB_INCLUDE_DIR NAMES rocksdb/db.h PATH_SUFFIXES include)
   SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${ROCKSDB_INCLUDE_DIR})
   # lz4
-  IF(LZ4_FOUND)
-    SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${LZ4_INCLUDE_DIRS})
-  ENDIF(LZ4_FOUND)
   SET(USE_LZ4 ${LZ4_FOUND})
 
   #core
@@ -909,10 +906,23 @@ IF(BUILD_WITH_ROCKSDB)
   SET(HEADERS_GUI_TO_MOC ${HEADERS_GUI_TO_MOC} ${HEADERS_ROCKSDB_GUI_TO_MOC})
   SET(HEADERS_GUI ${HEADERS_GUI} ${HEADERS_ROCKSDB_GUI})
   SET(SOURCES_GUI ${SOURCES_GUI} ${SOURCES_ROCKSDB_GUI})
-  SET(DB_LIBS ${DB_LIBS} ${ROCKSDB_LIBRARY} ${BZIP2_LIBRARIES} ${ZLIB_LIBRARIES} ${SNAPPY_LIBRARIES})
+  SET(DB_LIBS ${DB_LIBS} ${ROCKSDB_LIBRARY})
+  IF(SNAPPY_FOUND)
+    SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${SNAPPY_INCLUDE_DIRS})
+    SET(DB_LIBS ${DB_LIBS} ${SNAPPY_LIBRARIES})
+  ENDIF(SNAPPY_FOUND)
+  IF(ZLIB_FOUND)
+    SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${ZLIB_INCLUDE_DIRS})
+    SET(DB_LIBS ${DB_LIBS} ${ZLIB_LIBRARIES})
+  ENDIF(ZLIB_FOUND)
   IF(LZ4_FOUND)
+    SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${LZ4_INCLUDE_DIRS})
     SET(DB_LIBS ${DB_LIBS} ${LZ4_LIBRARIES})
   ENDIF(LZ4_FOUND)
+  IF(BZIP2_FOUND)
+    SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${BZIP2_INCLUDE_DIRS})
+    SET(DB_LIBS ${DB_LIBS} ${BZIP2_LIBRARIES})
+  ENDIF(BZIP2_FOUND)
 ENDIF(BUILD_WITH_ROCKSDB)
 
 #unqlite
@@ -1109,7 +1119,11 @@ IF(BUILD_WITH_UPSCALEDB)
   SET(HEADERS_GUI_TO_MOC ${HEADERS_GUI_TO_MOC} ${HEADERS_UPSCALEDB_GUI_TO_MOC})
   SET(HEADERS_GUI ${HEADERS_GUI} ${HEADERS_UPSCALEDB_GUI})
   SET(SOURCES_GUI ${SOURCES_GUI} ${SOURCES_UPSCALEDB_GUI})
-  SET(DB_LIBS ${DB_LIBS} ${UPSCALEDB_LIBRARY} ${Boost_LIBRARIES} ${ZLIB_LIBRARIES})
+  SET(DB_LIBS ${DB_LIBS} ${UPSCALEDB_LIBRARY} ${Boost_LIBRARIES})
+  IF(ZLIB_FOUND)
+    SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${ZLIB_INCLUDE_DIRS})
+    SET(DB_LIBS ${DB_LIBS} ${ZLIB_LIBRARIES})
+  ENDIF(ZLIB_FOUND)
 ENDIF(BUILD_WITH_UPSCALEDB)
 
 #forestdb
@@ -1171,7 +1185,11 @@ IF(BUILD_WITH_FORESTDB)
   SET(HEADERS_GUI_TO_MOC ${HEADERS_GUI_TO_MOC} ${HEADERS_FORESTDB_GUI_TO_MOC})
   SET(HEADERS_GUI ${HEADERS_GUI} ${HEADERS_FORESTDB_GUI})
   SET(SOURCES_GUI ${SOURCES_GUI} ${SOURCES_FORESTDB_GUI})
-  SET(DB_LIBS ${DB_LIBS} ${FORESTDB_LIBRARY} ${SNAPPY_LIBRARIES})
+  SET(DB_LIBS ${DB_LIBS} ${FORESTDB_LIBRARY})
+  IF(SNAPPY_FOUND)
+    SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${SNAPPY_INCLUDE_DIRS})
+    SET(DB_LIBS ${DB_LIBS} ${SNAPPY_LIBRARIES})
+  ENDIF(SNAPPY_FOUND)
 ENDIF(BUILD_WITH_FORESTDB)
 
 SET(SOURCES_SDS
@@ -1253,9 +1271,26 @@ TARGET_INCLUDE_DIRECTORIES(${PROJECT_CORE_ENGINE_LIBRARY} PRIVATE ${INCLUDE_DIRS
 TARGET_LINK_LIBRARIES(${PROJECT_CORE_ENGINE_LIBRARY} ${DB_LIBS} ${JSONC_LIBRARIES})
 
 # all
+IF(SNAPPY_FOUND)
+  SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${SNAPPY_INCLUDE_DIRS})
+  SET(COMPRESS_LIBRARIES ${COMPRESS_LIBRARIES} ${SNAPPY_LIBRARIES})
+ENDIF(SNAPPY_FOUND)
+IF(ZLIB_FOUND)
+  SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${ZLIB_INCLUDE_DIRS})
+  SET(COMPRESS_LIBRARIES ${COMPRESS_LIBRARIES} ${ZLIB_LIBRARIES})
+ENDIF(ZLIB_FOUND)
+IF(LZ4_FOUND)
+  SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${LZ4_INCLUDE_DIRS})
+  SET(COMPRESS_LIBRARIES $COMPRESS_LIBRARIES ${LZ4_LIBRARIES})
+ENDIF(LZ4_FOUND)
+IF(BZIP2_FOUND)
+  SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${BZIP2_INCLUDE_DIRS})
+  SET(COMPRESS_LIBRARIES ${COMPRESS_LIBRARIES} ${BZIP2_LIBRARIES})
+ENDIF(BZIP2_FOUND)
+
 SET(ALL_SOURCES ${ALL_SOURCES} ${HEADERS} ${HEADERS_TOMOC} ${SOURCES} ${MOC_FILES} ${PLATFORM_HDRS} ${PLATFORM_SRCS})
 SET(ALL_LIBS ${ALL_LIBS} ${PROJECT_CORE_ENGINE_LIBRARY} ${COMMON_LIBRARIES} ${JSONC_LIBRARIES} qscintilla2
-  ${QT_LIBRARIES} ${ZLIB_LIBRARIES} ${BZIP2_LIBRARIES} ${LZ4_LIBRARIES} ${SNAPPY_LIBRARIES} ${PLATFORM_LIBRARIES})
+  ${QT_LIBRARIES} ${COMPRESS_LIBRARIES} ${PLATFORM_LIBRARIES})
 
 FIND_PACKAGE(Qt5LinguistTools REQUIRED)
 
@@ -1270,6 +1305,7 @@ SET(EXE_SOURCES main.cpp ${RES_SRC} ${ICON_FILE} ${RESOURCE_OS} ${QM_FILES})
 IF(MINGW OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGCXX)
   ADD_LIBRARY(${PROJECT_CORE_LIBRARY} STATIC ${ALL_SOURCES})
   TARGET_LINK_LIBRARIES(${PROJECT_CORE_LIBRARY} ${OPENSSL_LIBRARIES} ${ALL_LIBS})
+  TARGET_INCLUDE_DIRECTORIES(${PROJECT_CORE_LIBRARY} PRIVATE ${INCLUDE_DIRS})
   IF(OS_ANDROID)
     ADD_LIBRARY(${PROJECT_NAME} SHARED ${DESKTOP_TARGET} ${EXE_SOURCES})
     TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_CORE_LIBRARY})
