@@ -255,6 +255,10 @@ void FastoEditorOutput::layoutChanged() {
     methodText = translations::trMsgPack;
   } else if (view_method_ == GZIP) {
     methodText = translations::trGzip;
+  } else if (view_method_ == LZ4) {
+    methodText = translations::trLZ4;
+  } else if (view_method_ == BZIP2) {
+    methodText = translations::trBZip2;
   } else if (view_method_ == SNAPPY) {
     methodText = translations::trSnappy;
   } else if (view_method_ == XML) {
@@ -293,6 +297,12 @@ void FastoEditorOutput::layoutChanged() {
     } else if (view_method_ == GZIP) {
       QString gzip = fromGzip(child);
       result += common::EscapedText(gzip);
+    } else if (view_method_ == LZ4) {
+      QString lz4 = fromLZ4(child);
+      result += common::EscapedText(lz4);
+    } else if (view_method_ == BZIP2) {
+      QString bzip2 = fromBZip2(child);
+      result += common::EscapedText(bzip2);
     } else if (view_method_ == SNAPPY) {
       QString snap = fromSnappy(child);
       result += common::EscapedText(snap);
