@@ -113,6 +113,8 @@ const QString trLoggingEnabled = QObject::tr("Logging enabled");
 const QString trHex = QObject::tr("Hex");
 const QString trMsgPack = QObject::tr("MsgPack");
 const QString trGzip = QObject::tr("Gzip");
+const QString trLZ4 = QObject::tr("LZ4");
+const QString trBZip2 = QObject::tr("BZip2");
 const QString trSnappy = QObject::tr("Snappy");
 const QString trXml = QObject::tr("Xml");
 const QString trCannotConvertPattern1ArgsS = QObject::tr("Cannot convert to '%1' format!");
