@@ -1,5 +1,6 @@
 1.16.3 /
 [Alexandr Topilski]
+- More compression views
 
 1.16.2 / February 10, 2018
 [Alexandr Topilski]
